--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Step Ham</title>
+    <title>Project Ham</title>
     <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="shortcut icon" type="image/png" href="./images/4 (1).png"/>
+
     <link rel="stylesheet" href="./css/styles.css" />
     <link
       rel="stylesheet"
